package Enum;

public enum CinemaColumn {
    A, B, C, D, E, F;
}
