@startuml
'https://plantuml.com/class-diagram

class Cinema {
-Film film;
-ScreenRoom screenRoom;
-double ticketPrice;
+sellTickets()
}

class Film {
-String title;
-int minutesDuration;
-int minimumAge
-String director
}

class ScreenRoom {
-Chair[] chairs
-int availableSeats
-assignSeat();
+lookForSeat();
}

class CinemaChair {
-CinemaRow row;
-CinemaColumn column;
-boolean isOccupied;
}

class Spectator {
-String name;
-int age;
-double money;
}

enum CinemaRow {
1
2
3
.
.
8
}

enum CinemaColumn {
A
B
C
D
E
F
}

Cinema "1" *-- "1-*" ScreenRoom
Cinema "1" o--"0-*" Film
Cinema <-left- "0-*" Spectator
ScreenRoom "1" *-- "*" CinemaChair
CinemaChair *-- CinemaColumn
CinemaChair *-- CinemaRow

@enduml